# onebit

./: .gitignore  LICENSE  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
onebit/: __init__.py  bench.py  cli.py  convert.py  engine.py  generate.py  layers.py  quant.py
onebit/kernels/: __init__.py  ternary.py
onebit/models/: __init__.py  config.py  registry.py  transformer.py
tests/: test_cli.py  test_layers.py  test_model.py  test_quant.py
