[project]
name = "onebit"
version = "0.1.0"
description = "Run LLMs locally on Apple Silicon via MLX — one command"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mlx>=0.21.0",
    "mlx-lm>=0.20.0",
    "click>=8.0",
    "rich>=13.0",
    "huggingface-hub>=0.20",
    "safetensors>=0.4",
    "transformers>=4.40",
    "pyyaml>=6.0",
    "jinja2>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.3"]
bench = ["lm-eval>=0.4"]

[project.scripts]
onebit = "onebit.cli:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
